--- a/train_test_split/test_data.yml
+++ b/train_test_split/test_data.yml
@@ -3,130 +3,155 @@ nlu:
 - intent: bot_challenge
   examples: |
     - am I talking to a human?
+    - are you a human?
 - intent: ask_for_research_prof
   examples: |
-    - I need help finding professors for [machine learning](topic)
+    - show me professors for [big data](topic)
 - intent: ask_student_program_requirements
   examples: |
-    - need student and program admission requirements
+    - want to know student and program admission requirements
 - intent: program_type
   examples: |
     - want to know more about programs
 - intent: ask_specific_deadline
   examples: |
-    - give me deadlines for [deferral request]
+    - want to know admission deadline for [spring/summer](program_intake)
 - intent: undergraduate_application
   examples: |
-    - applying for undergraduate studies
+    - select undergraduate
+    - choose undergraduate
 - intent: graduate_application
   examples: |
     - graduate application
 - intent: check_admission_info
   examples: |
-    - next intake
+    - When will next intake happen
 - intent: request_proff_name
   examples: |
-    - Give me contact information of professor
+    - show me contact information of professor
+    - get the contact information of professor
 - intent: ask_admission_requirements
   examples: |
-    - need admission requirements
+    - what are the admission requirements at lakehead
 - intent: ask_ielts_requirements
   examples: |
+    - want to know more about english language proficiency
     - want to learn about english language proficiency
 - intent: ask_admission_deadline
   examples: |
-    - admission deadline
+    - Can I know about admissions deadlines
 - intent: give_feedback
   examples: |
-    - provide feedback
+    - how to give feedback
+    - want to give feedback
 - intent: after_applying
   examples: |
-    - steps after applying
+    - what do i do after applying
 - intent: ask_track_application_status
   examples: |
-    - how to know application status
+    - track application status
+    - can i know application status
 - intent: payment_options
   examples: |
-    - what are the various ways of payment
+    - methods of payment
 - intent: ask_defer_admission
   examples: |
+    - how do i defer my admission
     - defer admission
 - intent: new_student
   examples: |
-    - i am a new student
+    - what does a new student need to know
 - intent: ask_housing
   examples: |
+    - want to learn more about residence
     - housing and residence
 - intent: affirm
   examples: |
+    - correct
     - that sounds good
 - intent: check_upcoming_holidays
   examples: |
-    - upcoming holidays
+    - like to know the events for this month
 - intent: am_student
   examples: |
-    - i am a high school student
+    - i am a graduate student
+    - i am an international student
 - intent: low_average
   examples: |
-    - did not achieve cut-off average
+    - have low average
+    - low grades
 - intent: ask_study_permit_info
   examples: |
-    - steps for study permit application
+    - study permit
+    - what is a student visa
 - intent: search_facebook
   examples: |
-    - lakehead's facebook
+    - lakehdead social media
+    - social media
 - intent: ask_accept_admission_offer
   examples: |
-    - how to accept admission offer
+    - need to accept admission offer
 - intent: pay_confirmation_deposit
   examples: |
-    - confirmation deposit
-    - payment for admission confirmation
+    - pay confirmation deposit
+    - need to play confirmation deposit
 - intent: ask_tuition_fee
   examples: |
+    - i want to learn more about the tuition and fees
     - how can i learn more about tuition and fees
 - intent: deny
   examples: |
+    - n
     - not really
 - intent: campus_facilities
   examples: |
-    - student support resources
-    - what are the different facilities provided by lakehead
+    - tell me about campus life
+    - what facilities do lakehead campuses have
 - intent: ask_international_student_services
   examples: |
-    - immigration advisor
+    - who to speak for immigration advice
+    - how to get help for immigration
 - intent: ask_admission_decision_timeline
   examples: |
-    - admission decision timeline
+    - can i know admission decision
+    - admission decision
+    - admission decision outcome
 - intent: ask_myinfo
   examples: |
-    - how to use myInfo
-    - where is the myInfo link
+    - more information about myInfo
+    - myInfo
 - intent: password_troubleshoot
   examples: |
-    - help with password
+    - myInfo troubleshoot
+    - cannot log into myInfo
 - intent: apply_to_lakehead
   examples: |
-    - how to apply to lakehead
-    - need to begin my application
+    - apply to lakehead university
+    - steps to apply to lakehead
 - intent: goodbye
   examples: |
+    - good night
     - have a nice day
-    - bye bye
+    - cu
 - intent: greet
   examples: |
-    - good evening
-    - good morning
     - goodevening
+    - goodmorning
+    - good morning
+    - good evening
 - intent: mood_great
   examples: |
-    - amazing
-    - so good
+    - I am great
+    - great
+    - I am going to save the world
+    - super stoked
 - intent: mood_unhappy
   examples: |
+    - super sad
+    - I'm so sad
     - extremly sad
-    - sad
-    - I am sad
+    - very sad
+    - not very good
 - lookup: topic
   examples: |
     - networks
